--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -197,23 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "\n",
-    "count = -1\n",
-    "\n",
-    "def capitalize_countries():\n",
-    "    for destination in range(0,len(travel_destinations)):\n",
-    "        travel_destinations[destination] = travel_destinations[destination].title()\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -221,6 +205,35 @@
      "output_type": "stream",
      "text": [
       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "\n",
+    "count = -1\n",
+    "\n",
+    "def capitalize_\n",
+    "    for destination in range(0,len(travel_destinations)):\n",
+    "        travel_destinations[destination] = travel_destinations[destination].title()\n",
+    "   \n",
+    "print(travel_destinations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'capitalize_countries' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-fa973c648c8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcapitalize_countries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtravel_destinations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m# ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'capitalize_countries' is not defined"
      ]
     }
    ],
